# avain

./: .gitignore  pyproject.toml
mac_app/: Avain.icns  Info.plist  main.py
mac_app/dmg_files/: dot_DS_Store  dot_VolumeIcon.icns
mac_app/main_ex/: Avain  Avain.c  Makefile
src/avain/: app.py  new_account.py  viewer.py
src/gpass/: app.py  totp.py  viewer.py
