[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gpass"
dynamic = ["version"]
license = ["MIT"]
dependencies = ["chafe", "tomlkit", "tkinter-embedded", "tk_clipssh"]
description = "A graphical password manager."
readme = {file = "README.rst", content-type = "text/x-rst"}
authors = [
    { name="Marc Culler", email="culler@users.noreply.github.com" },
]
maintainers = [
    { name="Marc Culler", email="culler@users.noreply.github.com" },
]
requires-python = ">=3.13"
keywords = ["password", "manager"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Tcl/Tk",
    "Topic :: Utilities"
    ]

[project.urls]
"Homepage" = "https://github.com/culler/gpass"
"Bug Tracker" = "https://github.com/culler/gpass/issues"

[tool.setuptools.dynamic]
version = {attr = "gpass.__version__"}